# simplecalc

./: AUTHORS.rst  LICENSE  README.md  README.rst  pyproject.toml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
simplecalc/: __init__.py  __main__.py  cli.py  operators.py
tests/: __init__.py  test_simplecalc.py
