[tool.poetry]
name = "simplecalc"
version = "0.1.0"
description = "A basic CLI calculator"
authors = ["claytod5 <claytod5@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
isort = "^5.7.0"
flake9 = "^3.8.3"
pydocstyle = "^5.1.1"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.flake8]
ignore = "E203"
max-line-length = 88

[tool.poetry.scripts]
simplecalc = 'simplecalc.__main__:main'
